--- a/src/components/VideoModal/modal_video_style.css
+++ b/src/components/VideoModal/modal_video_style.css
@@ -44,7 +44,7 @@
   transform: translate(0, 100px);
 }
 .modal-video-body {
-  max-width: 940px;
+  max-width: 70vw;
   width: 100%;
   height: 100%;
   margin: 0 auto;
