--- a/src/styles/old/default-theme/lib/bootstrap/css/bootstrap.css
+++ b/src/styles/old/default-theme/lib/bootstrap/css/bootstrap.css
@@ -6168,7 +6168,7 @@ a.close.disabled {
   width: 1rem;
   margin-left: -0.5rem;
   content: "";
-  border-bottom: 1px solid #f7f7f7;
+  border-bottom: 1px solid #ededed;
 }
 
 .bs-popover-left, .bs-popover-auto[x-placement^="left"] {
@@ -6198,7 +6198,7 @@ a.close.disabled {
   padding: 0.5rem 0.75rem;
   margin-bottom: 0;
   font-size: 1rem;
-  background-color: #f7f7f7;
+  background-color: #ededed;
   border-bottom: 1px solid #ebebeb;
   border-top-left-radius: calc(0.3rem - 1px);
   border-top-right-radius: calc(0.3rem - 1px);
